PythonGatewaySupport: added Python error logging